Alignment fixes [#147 state:resolved]

--- a/theme/_css/layout.less
+++ b/theme/_css/layout.less
@@ -265,6 +265,7 @@
     /*Top menu*/
     .nav {
         height: 60px;
+		padding-top: 2px;
     }
     .nav li {
         float: left;
@@ -336,7 +337,7 @@
     .aare {
         position: absolute;
         left: 14px;
-        top: 62px;
+        top: 64px;
         width: 64px;
         text-align: center;
         background: url(../_img/aare.png) center center no-repeat;
@@ -346,7 +347,7 @@
     .header time {
         display: block;
         position: absolute;
-        bottom: 20px;
+        bottom: 22px;
         left: 0px;
 		z-index: 2;
     }
@@ -407,7 +408,7 @@
     /* Header search area */
 	.header .search {
         position: absolute;
-        top: 125px;
+        top: 123px;
         right: -25px;
         text-align: center;
         width: 150px;
@@ -928,6 +929,9 @@
 		.headline-font;
 		margin-top: 0px;
 	}
+	article .article_top {
+		min-height: 180px;
+	}
 	article .subtitle {
 		float: left;
 		line-height: 1.1em;
@@ -955,7 +959,6 @@
 	}
     .article_info author {
 		margin-bottom: 25px;
-		margin-top: 18px;
 		display: block;
     }
 	.article_info author a {
