--- a/theme/_css/slider.less
+++ b/theme/_css/slider.less
@@ -1,6 +1,8 @@
 .slider {
 	position: relative;
 	width: 100%;
+	margin-top: 20px;
+	margin-bottom: 6px;
 }
 .slider .sizer {
 	width: 100%;
@@ -104,6 +106,13 @@
 	height: 100%;
 	background: #000;
 }
+
+
+.gallery_info {
+	position: absolute;
+	width: 100px;
+	left: 0px;
+}
 .gallery_info.mobile .gallery_description {
 	position: absolute;
 	bottom: 0px;
@@ -126,6 +135,7 @@
 	height: 100%;
 	z-index: 10;
 }
+
 
 .gallery_status {
 	.subheading;
